src/main/java/com/example/Demo/errors/exception/permission/PermissionException.java
package com.example.Demo.errors.exception.permission;

public class PermissionException extends RuntimeException {
    public PermissionException(String message) {
        super(message);
    }
}
